<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KayitEkraniOnayFragment">

    <TextView
        android:id="@+id/kayitOnayEkraniBaslik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/baslik"
        android:textColor="#FF0000"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/kayitEkraniAciklama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kayitOnayEkraniAciklama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kayit_ekrani_text1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/kayitAktifEtMailText"
        app:layout_constraintEnd_toEndOf="@+id/kayitOnayEkraniBaslik"
        app:layout_constraintStart_toStartOf="@+id/kayitOnayEkraniBaslik"
        app:layout_constraintTop_toBottomOf="@+id/kayitOnayEkraniBaslik" />

    <TextView
        android:id="@+id/kayitAktifEtMailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text=""
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/kayitEkraniKodEditText"
        app:layout_constraintEnd_toEndOf="@+id/kayitOnayEkraniAciklama"
        app:layout_constraintStart_toStartOf="@+id/kayitOnayEkraniAciklama"
        app:layout_constraintTop_toBottomOf="@+id/kayitOnayEkraniAciklama" />

    <EditText
        android:id="@+id/kayitEkraniKodEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/kayit_onay_ekrani_hint1"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/kayitEkraniKayitTamamlaButon"
        app:layout_constraintEnd_toEndOf="@+id/kayitAktifEtMailText"
        app:layout_constraintStart_toStartOf="@+id/kayitAktifEtMailText"
        app:layout_constraintTop_toBottomOf="@+id/kayitAktifEtMailText" />

    <Button
        android:id="@+id/kayitEkraniKayitTamamlaButon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/kayit_onay_ekrani_text1"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/kayitEkraniKodEditText"
        app:layout_constraintStart_toStartOf="@+id/kayitEkraniKodEditText"
        app:layout_constraintTop_toBottomOf="@+id/kayitEkraniKodEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>